# wasm.xchacha20poly1305

./: Cargo.toml  LICENSE  README.md  notes.txt
src/: chacha20poly1305.rs  chacha20poly1305_incremental.rs  chiffrage.rs  lib.rs
